# semantic_planning_panda

./: CMakeLists.txt  README.md  package.xml  plugin.xml
config/: franka_control_node.yaml  my_controllers.yaml
include/: cornerplace_skill.h  putdown_controller.h  rosfranka_test.h  semantic_mpc_controller.h  worldmodel.h
launch/: demo.launch  dual_arm_sim.launch  franka_control.launch  panda.launch  panda_controller.launch  robot.rviz  spawn_panda.launch  upload_urdf.launch
simulator/: dual_arm_setup.world
simulator/models/box/: model.config  model.sdf
simulator/models/panda_table/: model.config  model.sdf
simulator/models/rice_box/: model.config  model.sdf
src/: compliant_control.cpp  compliant_control.h  cornerplace_skill.cpp  data_saver.cpp  data_saver.h  examples_common.h  main.cpp  main_collision_detection.cpp  main_rosfranka_test.cpp  main_topo_planner.cpp  main_vereshchagin.cpp  position_control.cpp  position_control.h  putdown_controller.cpp  rosfranka_test.cpp  semantic_mpc_controller.cpp  semantic_mpc_controller.h  topological_motion_planning_main.cpp  tube_control.cpp  tube_control.h  velocity_control.cpp  velocity_control.h  worldmodel.cpp
