<?xml version="1.0"?>
<package format="2">
  <name>semantic_planning_panda</name>
  <version>0.0.0</version>
  <description>Research package for semantic planning using the franka emika panda robot</description>

  <maintainer email="p.v.dooren@tue.nl">Peter van Dooren</maintainer>
	  
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>cmake_modules</exec_depend>

  <depend>controller_interface</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml" />
  </export>
</package>
